--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(5, 5, 48);
+  color: whitesmoke;
+  padding: 15px;
+  font-size: 2em;
+}
+
+.nav a {
+  color: whitesmoke;
+  text-decoration: none;
+}
